# spot-check

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run-spot-check.bat
.cursor/rules/: python.mdc
.github/workflows/: ci.yml  regression.yml  release-windows.yml
packaging/: pyi_rth_skip_vtk_matplotlib.py  spot-check.spec  trim_windows_bundle.py  win_entry.py
packaging/hooks/: hook-matplotlib.py  hook-pyvista.py  hook-vtkmodules.py
scripts/: build-windows.sh  bump-version.sh  cube_axes_10_cube_test.py  cube_axes_sanity_check.py  lint.sh  setup.bat  setup.ps1  setup.sh  split_analysis_core.py  split_gui_app.py  validate_auto_t0g10.py  z_axis_label_study.py
src/spot_check/: __init__.py  _version.py  analysis.py  constants.py  exceptions.py  gui.py  logging_utils.py  models.py  types.py
src/spot_check/analysis/: __init__.py  _core.py  _imports.py  alignment.py  auto_columns.py  auto_layer_em.py  auto_params.py  colors.py  csv_io.py  episodes.py  layers.py  measured.py  plan_qa.py  plan_sequential.py  pyvista_backend.py  spatial.py
src/spot_check/analysis/assign/: __init__.py  _post.py  base.py  episodes.py  layer_auto.py  layer_gate_counter.py  layer_plan_viterbi.py  layer_time_gap.py  plan_sequential.py  types.py
src/spot_check/analysis/viz/: __init__.py  data.py  display_meshes.py  embed.py  glyphs.py  plotter.py  spot_info.py  spot_pick.py
src/spot_check/analysis/viz/scene_grid/: __init__.py  bounds.py  planner.py  (+7 more)
src/spot_check/export/: __init__.py  combined_table.py
src/spot_check/geometry/: __init__.py  cube_axes.py  cube_axes_style.py  proton_csda_water.py  scene_bounds.py  z_axis.py
src/spot_check/gui/: __init__.py  app.py  controller.py  defaults.py  layer_assign.py  load_overlay.py  parsers.py  pipeline.py  pipeline_progress.py  spot_info_popup.py  state.py  theme.py  timeline_playback.py  workers.py
src/spot_check/gui/panels/: __init__.py  status_format.py
src/spot_check/pipeline/: __init__.py  diagnostics.py  export_job.py  layer_mode.py  load_result.py  orchestrator.py  progress.py  types.py
src/spot_check/pipeline/phases/: __init__.py  aggregate.py  align.py  assign.py  coarse_flat.py  csv_preload.py  filter.py  fine_align.py  load.py  qa.py
src/spot_check/plan/: __init__.py  dicom.py  load.py  pyramid_csv.py
tests/: analysis_import_audit.py  conftest.py  test_aggregate_zero_weight_span.py  test_align_caption.py  test_analysis_import_audit.py  test_assign_pre_alignment_modes.py  test_auto_delivery_metric.py  test_auto_episodes.py  test_auto_episodes_performance.py  test_auto_impute_performance.py  test_auto_layer_em.py  test_auto_layer_indices.py  test_auto_params.py  test_auto_t0g10_agreement.py  test_auto_t0g40_agreement.py  test_coarse_flat_orientation.py  test_csv_io.py  test_cube_z_water_depth_axis.py  test_episodes_merge.py  test_export.py  test_filter_xy_fliers.py  test_fine_detector_align.py  test_fine_t0g10_qa.py  test_gate_counter_layers.py  test_geometry.py  test_gui_layer_assign.py  test_gui_state.py  test_heal_partial_fit_axes.py  test_measured_layer_modes.py  test_measured_weights.py  test_monotone_plan_realign.py  test_parsers.py  test_parsers_wet.py  test_pipeline_layer_mode.py  test_pipeline_orchestrator.py  test_pipeline_progress.py  test_pipeline_qa_export.py  test_plan_boundary_refine.py  test_plan_dose_qa.py  test_plan_episode_expansion.py  (+15 more)
