[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-check"
dynamic = ["version"]
description = "RT Ion therapy plan (DICOM) vs acquisition (CSV) review and 3D visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Pyramid Technical Consultants" }]
keywords = ["dicom", "ion-therapy", "qa", "pyvista"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy",
    "pydicom",
    "pyvista",
    "PySide6",
]

[project.optional-dependencies]
fast = ["scipy"]
build = [
    "pyinstaller>=6.6,<7",
    "pyinstaller-hooks-contrib>=2024.10",
    "matplotlib>=3.8",
]
dev = ["pytest>=8", "pytest-timeout>=2.3", "ruff>=0.4", "mypy>=1.10", "pre-commit>=3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: larger regression tests (runtime)",
]

[tool.mypy]
python_version = "3.12"
packages = ["spot_check"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

[tool.setuptools.dynamic]
version = { attr = "spot_check._version.__version__" }

[project.scripts]
spot-check = "spot_check.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spot_check = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Split analysis modules share stdlib/constants via star import from _imports.
"src/spot_check/analysis/**/*.py" = ["F405"]
